# trasource

./: .env.example  .gitignore  README.md  config.py  index.html  package-lock.json  package.json  requirements.txt  start.sh  trasource-backend.spec  tsconfig.json  vite.config.ts
backend/: server.py
backend/routes/: chat.py  history.py  import_files.py  library.py  notes.py  projects.py  search.py  settings.py
core/: chat.py  db.py  history_manager.py  ingest.py  legacy_prompts.py  llm.py  llm_provider.py  notes_manager.py  project_manager.py  query_expander.py  retriever.py  settings_manager.py
src/: App.vue  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  llm.rs
src/api/: client.ts
src/components/dialogs/: ImportDialog.vue  LibraryDialog.vue  RecordDetailDialog.vue  SettingsDialog.vue
src/components/layout/: Sidebar.vue  StatusBar.vue
src/components/search/: ChatPanel.vue  ExtractionPanel.vue  KeywordPanel.vue  RecordsList.vue  SearchHeader.vue
src/i18n/: en.ts  index.ts  zh.ts
src/router/: index.ts
src/stores/: backend.ts  notes.ts  project.ts  search.ts  ui.ts
src/styles/: global.css
src/utils/: markdown.ts
src/views/: HistoryView.vue  NotesView.vue  SearchView.vue
